<resources>
    <string name="app_name">MobTsProjekti</string>

    <string name="mainactivity_teksti">LADATAAN...</string>
    <!--Käyttäjänasetus-->
    <string name="kayttajantiedot_otsikko">Käyttäjän tiedot</string>
    <string name="kayttajantiedot_ika">Kuinka vanha olet?</string>
    <string name="kayttajantiedot_pituus">Anna pituutesi (cm)</string>
    <string name="kayttajantiedot_paino">Paljonko painat? (Kg)</string>
    <string name="kayttajantiedot_tallennus">Tallenna</string>

    <!--Tavoitteenasetus-->
    <string name="tavoitteenasetus_otsikko">Aseta tämän viikon tavoitteesi</string>
    <string name="tavoitteenasetus_uni">Montako tuntia aiot nukkua yössä?</string>
    <string name="tavoitteenasetus_liikunta">Montako kilometriä aiot kävellä?</string>
    <string name="tavoitteenasetus_ravinto">Montako kertaa aiot syödä ulkona?</string>
    <string name="tavoitteenasetus_lenkki_switch">Aiotko lenkkeillä?</string>
    <string name="tavoitteenasetus_lenkki_tieto">Montako kilometriä?</string>
    <string name="tavoitteenasetus_sali_switch">Aiotko käydä salilla?</string>
    <string name="tavoitteenasetus_sali_tieto">Montako kertaa?</string>
    <string name="tavoitteenasetus_tallennus">Tallenna</string>

    <!--Lomakeaktiviteetti-->
    <string name="lomake_otsikko">Miten päiväsi on sujunut?</string>
    <string name="lomake_otsikko_tayttetty">Päivä tallennettu! :)</string>
    <string name="lomake_aktiviteetinvaihto_kayttajantiedot">Muuta tietojasi</string>
    <string name="lomake_aktiviteetinvaihto_viikkotavoite">Muuta viikkotavoitetta</string>
    <string name="lomake_aktiviteetinvaihto_edistyminen">Edistymisesi</string>
    <string name="lomake_uni_switch">Nukuitko tarpeeksi?</string>
    <string name="lomake_liikunta_switch">Kävelitkö tarpeeksi?</string>
    <string name="lomake_syonti_switch">Söitkö ulkona?</string>
    <string name="lomake_uni">Montako tuntia nukuit?*</string>
    <string name="lomake_liikunta">Kuinka monta kilometriä kävelit?*</string>
    <string name="lomake_syonti">Monestiko söit tänään ulkona?*</string>
    <string name="lomake_lenkki">Kuinka monta kilometriä lenkkeilit yhteensä?</string>
    <string name="lomake_sali">Montako kertaa kävit tänään salilla?</string>
    <string name="lomake_tallennus">Tallenna</string>
</resources>