<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LomakeActivity">

    <EditText
        android:id="@+id/liikuntaText"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lomake_liikunta"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liikuntaSwitch" />

    <Switch
        android:id="@+id/syontiSwitch"
        android:layout_width="171dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/lomake_syonti_switch"
        app:layout_constraintStart_toStartOf="@+id/ulkonaSyontiText"
        app:layout_constraintTop_toBottomOf="@+id/liikuntaText" />

    <EditText
        android:id="@+id/lenkkiText"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/lomake_lenkki"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ulkonaSyontiText" />

    <EditText
        android:id="@+id/saliText"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/lomake_sali"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lenkkiText" />

    <EditText
        android:id="@+id/ulkonaSyontiText"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lomake_syonti"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/syontiSwitch" />

    <Switch
        android:id="@+id/liikuntaSwitch"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/lomake_liikunta_switch"
        app:layout_constraintStart_toStartOf="@+id/liikuntaText"
        app:layout_constraintTop_toBottomOf="@+id/uniText" />

    <Button
        android:id="@+id/button_Graafeihin"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:text="@string/lomake_aktiviteetinvaihto_edistyminen"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_Tavoitteenasetukseen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_Tavoitteenasetukseen"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/button_kayttajan_tietoihin"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:text="@string/lomake_aktiviteetinvaihto_kayttajantiedot"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_Tavoitteenasetukseen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_Tavoitteenasetukseen" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/lomake_otsikko"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Tavoitteenasetukseen"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/lomake_aktiviteetinvaihto_viikkotavoite"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tallennusButton_lomake"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/uniText"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lomake_uni"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uniSwitch" />

    <Switch
        android:id="@+id/uniSwitch"
        android:layout_width="171dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/lomake_uni_switch"
        app:layout_constraintStart_toStartOf="@+id/uniText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/tallennusButton_lomake"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/lomake_tallennus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saliText" />
</androidx.constraintlayout.widget.ConstraintLayout>